Superscalar/sashank/.svn/pristine/cf/cf58108746fe4d963e952ac1180ab03410c9a6bd.svn-base
Cache.java:88: error: possible loss of precision
	return (int)temp1&temp;
	                 ^
  required: int
  found:    long
1 error

Compiler error. At least one needed class was not created.
(ALERT! Please make sure you have added an 's' to the variables:
	 total_bytes_tranferred_wb and total_bytes_tranferred_wt (add the s to get --> tran-S-ferred)
which were sadly/embarrassingly mis-spelled at first...)
